Change testdata overview to id/time/name/actions, change table formatting to ensure responsiveness on small viewports

--- a/staticassets/base.css
+++ b/staticassets/base.css
@@ -62,7 +62,7 @@ html, body {
 }
 
 .landing-text h1 {
-    /* font-size: 500%; */
+    font-size: 500%;
     font-size: 6vw;
     font-weight: 700;
     color: whitesmoke;/* rgb(0, 37, 70);*/
@@ -71,7 +71,7 @@ html, body {
 }
 
 .landing-text h3 {
-    font-size: 4vw;
+    /* font-size: 4vw; */
     /*font-size: 300%;*/
     font-weight: 500;
     color: rgb(0, 37, 70);
@@ -123,8 +123,8 @@ footer {
 
 /* download data button */
 .fa-download {
-    padding: 15px;
-    font-size: 25px;
+    padding: 5px;
+    font-size: 15px;
     color: #FFF;
 }
 
@@ -135,8 +135,8 @@ footer {
 
 /* view data button */
 .fa-chart-area {
-    padding: 15px;
-    font-size: 25px;
+    padding: 5px;
+    font-size: 15px;
     color: #FFF;
 }
 
@@ -201,7 +201,7 @@ footer {
 }
 
 .module-text h1 {
-    font-size: 500%;
+    /*font-size: 500%;*/
     font-weight: 700;
     color: whitesmoke; /* rgb(0, 37, 70);*/
     padding: 5px 5px;
@@ -212,4 +212,9 @@ footer {
     display: inline-block;
     text-align: center;
     width: 85%;
+}
+
+/* For breaking words to ensure no oversize tables on mobile devices */
+.table {
+    word-break: break-all;
 }
